fix cart alignment

--- a/app/styles/matts.scss
+++ b/app/styles/matts.scss
@@ -47,3 +47,19 @@
 .cart-group {
   margin-top: 40px;
 }
+
+td {
+  text-align: center;
+}
+
+.infoTable {
+  position: fixed;
+}
+
+.flt {
+  // float: right;
+}
+
+.buttonCenter {
+  // margin: auto;
+}
